Try decreasing quote font size to prevent line breaks on mobile

--- a/styles.css
+++ b/styles.css
@@ -39,6 +39,7 @@ blockquote {
 @media (max-width: 480px) {
   blockquote {
     margin-left: 0;
+	font-size: 0.68rem;
   }
 }
 
